--- a/public/index.html
+++ b/public/index.html
@@ -255,7 +255,7 @@
       };
     };
   </script>
-  <script async type="text/javascript" src="helloworld.js"></script>
+  <script async type="text/javascript" src="memoria.js"></script>
 </body>
 
 </html>
